--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,2 +1,2 @@
 config: 
-  info: "main branch,springcloud-config/config-dev.yml version-1 testSSR test2 test3 test4 test5 test6"
+  info: "main branch,springcloud-config/config-dev.yml version-1 testSSR test2 test3 test4 test5 test6 test7"
